Prevent overflow in Dialog example

--- a/storybook/src/styles/docs.css
+++ b/storybook/src/styles/docs.css
@@ -69,6 +69,7 @@
 .ams-docs-backdrop {
   background-color: var(--ams-dialog-backdrop-background-color);
   block-size: 100%;
+  box-sizing: border-box;
   inline-size: 100%;
   padding-block: 1rem;
   padding-inline: 1rem;
